banner styles change commit

--- a/Banner.html
+++ b/Banner.html
@@ -15,7 +15,7 @@
   <!-- fancy-box css -->
   <link rel="stylesheet" href="css/plugins/fancybox.min.css">
   <!-- main css -->
-<link rel="stylesheet" href="css/style.css">
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 <link rel="stylesheet" href="scss/Banner.css">
     link
 </li>
@@ -88,6 +88,8 @@
 
             </div>
             <!-- jquery js -->
+            <div id="swupMenu"></div> 
+
   <script src="js/plugins/jquery.min.js"></script>
   <!-- anime js -->
   <script src="js/plugins/anime.min.js"></script>
